Implemented scenario to delete one time code after maximum validation attempts
