# src/main/resources/openapi/OneTimeCode.yml
@@ -1,7 +1,7 @@
 openapi: 3.0.0
 info:
   title: One Time Code APIs
-  version: '0.0.2'
+  version: '0.0.3'
   description: OpenAPI Spec document describing the REST APIs for the One Time Code application
   contact:
     name: Clarity Software Solutions Ltd
@@ -89,6 +89,8 @@ paths:
           $ref: '#/components/responses/404ErrorResponse'
         409:
           $ref: '#/components/responses/409ErrorResponse'
+        410:
+          $ref: '#/components/responses/410ErrorResponse'
 
 # --------------------------------------------------------------------------------
 #
@@ -233,6 +235,29 @@ components:
             status: 409
             error: 'Conflict'
             message: 'One Time Code with id ea17ded9-6333-4492-9f34-fe4b7d4d6123 has an unexpected status = TOO_MANY_VALIDATION_ATTEMPTS'
+    410ErrorResponse:
+      description: |
+        Error response for a HTTP 410 describing the problem with the request.
+        Typical examples are that a One Time Code has exceeded the number of validation attempts and has been removed from the system.
+      headers:
+        Access-Control-Allow-Origin:
+          schema:
+            type: string
+        Access-Control-Allow-Methods:
+          schema:
+            type: string
+        Access-Control-Allow-Headers:
+          schema:
+            type: string
+      content:
+        application/json:
+          schema:
+            $ref: '#/components/schemas/ErrorResponse'
+          example:
+            timestamp: '2022-09-28T18:01:42.105Z'
+            status: 410
+            error: 'Gone'
+            message: 'One Time Code has failed validation and has been removed'
 
     OneTimeCode:
       description: Response object containing a One Time Code
